table not aligned in center column and seems shrunk because of float:right (table-layout: fixed and width: 100%) https://bugs.webkit.org/show_bug.cgi?id=18153

Patch by Arpita Bahuguna <arpitabahuguna@gmail.com> on 2012-11-08
Reviewed by Beth Dakin.

Source/WebCore:

Preferred logical width is computed incorrectly for fixed layout tables
with 100% percent width, in standards mode.

According to our fixed table layout algorithm (CSS2 specification - 17.5.2.1)
the ultimate width of the table is the greater of the value of the
'width' property for the table elements and the sum of the column
widths.

For our specific scenario we have a fixed layout table with 100% width
consisting of columns with fixed widths, the sum of which is less than
the specified width of the table (i.e. 100% of the containing block).
Even then the applied width is the cummulative of the width of the
columns.

This happens because of the quirks mode check added in
FixedTableLayout::computePreferredLogicalWidths(), which prohibits the
setting of maxWidth to our fixed layout table with percent width, and
which perhaps is not required anymore.

Test: fast/table/fixed-table-layout/table-with-percent-width.html

* rendering/FixedTableLayout.cpp:
(WebCore::FixedTableLayout::computePreferredLogicalWidths):
Removed the quirks mode check.

LayoutTests:

* fast/table/fixed-table-layout/table-with-percent-width-expected.txt: Added.
* fast/table/fixed-table-layout/table-with-percent-width.html: Added.
Test added to verify the width of the fixed layout tables with 100%
width, in standards mode.

Canonical link: https://commits.webkit.org/119803@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@134017 268f45cc-cd09-0410-ab3c-d52691b4dbfc